# NeuralSymbolic_OmniIPS_Knowledge_Representation_Playground

./: .env.example  Dockerfile  Dockerfile.frontend  README.md  SECURITY.md  pyproject.toml
.github/: dependabot.yml
api/: main.py
data_pipelines/: ingest_algebra.py  ingest_chemistry.py  ingest_geometry.py
domains/: geometry.py
rag_agent/: llm_factory.py  router.py
